examples/test/testpolicy18508.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18508
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key30: value11
      key24: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value12
          key2: value28
      podSelector:
        matchLabels:
          key19: value29
          key39: value19
          key47: value43
